tests/rosetta/transpiler/Scala/abbreviations-easy.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:58: error: value size is not a member of Any
      val wlen: Int = (w).size
                          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:62: error: value size is not a member of Any
        if (mins(ci) != 0 && wlen >= mins(ci) && wlen <= (cmd).size) {
                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:63: error: not found: value upper
          val c = upper(cmd)
                  ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:64: error: not found: value upper
          val ww = upper(w)
                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:68: error: not found: value break
            break
            ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:82: error: type mismatch;
 found   : String("Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput  Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp ")
 required: Int
    val table: Int = "Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy " + "COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find " + "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput " + " Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO " + "MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT " + "READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT " + "RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp "
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:83: error: type mismatch;
 found   : Int
 required: String
    val commands = fields(table)
                          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:90: error: value size is not a member of Any
      while (j < (cmd).size) {
                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-easy.scala:91: error: value substring is not a member of Any
        val ch: String = cmd.substring(j, j + 1)
                             ^
9 errors found
